# WebScarping

./: .gitignore  GITHUB_DESCRIPTION.md  README.md  config.py  ejemplo.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run-tui.bat  run-tui.sh  run-web.bat  run-web.sh  run.bat  run.sh  tui.py  web.py
output/: crawl_history.db  filefinder.db
src/: crawler.py  database.py  detector.py  logger.py  resilience.py  robots.py  sitemaps.py  useragents.py
v1/: README.md  main.py  tui.py  web.py
v1/src/: crawler.py  storage.py  wordpress.py
